--- a/portfolio.html
+++ b/portfolio.html
@@ -31,10 +31,20 @@
             </nav>
             <ul class="contacts">
                 <li class="contacts-item">
-                    <a href="mailto:info@devstudio.com" class="contacts-link">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com" class="contacts-link">
+                        <svg class="contacts-icon" width="16" height="12">
+                            <use href="./images/sprite.svg#icon-envelope">
+                            </use>
+                        </svg> info@devstudio.com
+                    </a>
                 </li>
                 <li class="contacts-item">
-                    <a href="tel:+380961111111" class="contacts-link">+38 096 111 11 11</a>
+                    <a href="tel:+380961111111" class="contacts-link">
+                        <svg class="contacts-icon" width="10" height="16">
+                            <use href="./images/sprite.svg#icon-smartphone">
+                            </use>
+                        </svg> +38 096 111 11 11
+                    </a>
                 </li>
             </ul>
         </div>
@@ -158,22 +168,61 @@
     </main>
     <!--Подвал-->
     <footer class="contact-info">
-        <div class="container">
-            <a href="./index.html" class="logo footer-logo">Web<span class="style-logo-white">Studio</span></a>
-            <address class="contact-info-address">
-                <ul class="address-studio">
-                    <li class="address-studio-item">
-                        <a href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265841,30.5361971,17z/"
-                            target="_blank" class="link-map">г. Киев, пр-т Леси Украинки, 26</a>
+        <div class="container footer-position">
+            <div class="">
+                <a href="./index.html" class="logo footer-logo">Web<span class="style-logo-white">Studio</span></a>
+                <address class="contact-info-address">
+                    <ul class="address-studio">
+                        <li class="address-studio-item">
+                            <a href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265841,30.5361971,17z/"
+                                target="_blank" class="link-map">г. Киев, пр-т Леси Украинки, 26</a>
+                        </li>
+                        <li class="address-studio-item">
+                            <a href="mailto:info@devstudio.com" class="address-studio-link">info@devstudio.com</a>
+                        </li>
+                        <li class="address-studio-item">
+                            <a href="tel:+380961111111" class="address-studio-link">+38 096 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+            <div class="social-info">
+                <h3 class="social-info-title">Присоединяйтесь</h3>
+                <ul class="social-info-list">
+                    <li class="social-info-item">
+                        <a href="" class="social-info-link">
+                            <svg class="social-info-icon" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-instagram">
+                                </use>
+                            </svg>
+                        </a>
                     </li>
-                    <li class="address-studio-item">
-                        <a href="mailto:info@devstudio.com" class="address-studio-link">info@devstudio.com</a>
+                    <li class="social-info-item">
+                        <a href="" class="social-info-link">
+                            <svg class="social-info-icon" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-twitter">
+                                </use>
+                            </svg>
+                        </a>
                     </li>
-                    <li class="address-studio-item">
-                        <a href="tel:+380961111111" class="address-studio-link">+38 096 111 11 11</a>
+                    <li class="social-info-item">
+                        <a href="" class="social-info-link">
+                            <svg class="social-info-icon" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-facebook">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-info-item">
+                        <a href="" class="social-info-link">
+                            <svg class="social-info-icon" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-linkedin">
+                                </use>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
-            </address>
+            </div>
         </div>
     </footer>
 </body>
