Правки после проверки

--- a/portfolio.html
+++ b/portfolio.html
@@ -64,103 +64,85 @@
                 </ul>
                 <ul class="project">
                     <li class="project-item">
-                        <article class="project-item-card">
-                            <div class="project-item-content">
-                                <img src="./images/kryak.jpg" alt="Ноутбук с изображением сайта" width="370" height="294">
-                                <div class="project-item-box">
-                                    <h2 class="project-title">Технокряк</h2>
-                                    <p class="project-text">Веб-сайт</p>
-                                </div>
+                        <a href="" class="project-item-content">
+                            <img src="./images/kryak.jpg" alt="Ноутбук с изображением сайта" width="370" height="294">
+                            <div class="project-item-box">
+                                <h2 class="project-title">Технокряк</h2>
+                                <p class="project-text">Веб-сайт</p>
                             </div>
-                        </article>
+                        </a>
                     </li>
                     <li class="project-item">
-                        <article class="project-item-card">
-                            <div class="project-item-content">
-                                <img src="./images/poster.jpg" alt="Два баскетболиста с мячом в прыжке" width="370" height="294">
-                                <div class="project-item-box">
-                                    <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
-                                    <p class="project-text">Дизайн</p>
-                                </div>
+                        <a href="" class="project-item-content">
+                            <img src="./images/poster.jpg" alt="Два баскетболиста с мячом в прыжке" width="370" height="294">
+                            <div class="project-item-box">
+                                <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
+                                <p class="project-text">Дизайн</p>
                             </div>
-                        </article>
+                        </a>
                     </li>
                     <li class="project-item">
-                        <article class="project-item-card">
-                            <div class="project-item-content">
-                                <img src="./images/resto.jpg" alt="Логотип ресторана Seafood" width="370" height="294">
-                                <div class="project-item-box">
-                                    <h2 class="project-title">Ресторан Seafood</h2>
-                                    <p class="project-text">Приложение</p>
-                                </div>
+                        <a href="" class="project-item-content">
+                            <img src="./images/resto.jpg" alt="Логотип ресторана Seafood" width="370" height="294">
+                            <div class="project-item-box">
+                                <h2 class="project-title">Ресторан Seafood</h2>
+                                <p class="project-text">Приложение</p>
                             </div>
-                        </article>
+                        </a>
                     </li>
                     <li class="project-item">
-                        <article class="project-item-card">
-                            <div class="project-item-content">
-                                <img src="./images/prime.jpg" alt="Наушники" width="370" height="294">
-                                <div class="project-item-box">
-                                    <h2 class="project-title">Проект Prime</h2>
-                                    <p class="project-text">Маркетинг</p>
-                                </div>
+                        <a href="" class="project-item-content">
+                            <img src="./images/prime.jpg" alt="Наушники" width="370" height="294">
+                            <div class="project-item-box">
+                                <h2 class="project-title">Проект Prime</h2>
+                                <p class="project-text">Маркетинг</p>
                             </div>
-                        </article>
+                    </a>
                     </li>
                     <li class="project-item">
-                        <article class="project-item-card">
-                            <div class="project-item-content">
-                                <img src="./images/boxes.jpg" alt="Две коробки" width="370" height="294">
-                                <div class="project-item-box">
-                                    <h2 class="project-title">Проект Boxes</h2>
-                                    <p class="project-text">Приложение</p>
-                                </div>
+                        <a href="" class="project-item-content">
+                            <img src="./images/boxes.jpg" alt="Две коробки" width="370" height="294">
+                            <div class="project-item-box">
+                                <h2 class="project-title">Проект Boxes</h2>
+                                <p class="project-text">Приложение</p>
                             </div>
-                        </article>
+                        </a>
                     </li>
                     <li class="project-item">
-                        <article class="project-item-card">
-                            <div class="project-item-content">
-                                <img src="./images/website.jpg" alt="Монитор Apple с изображением сайта" width="370" height="294">
-                                <div class="project-item-box">
-                                    <h2 class="project-title">Inspiration has no Borders</h2>
-                                    <p class="project-text">Веб-сайт</p>
-                                </div>
+                        <a href="" class="project-item-content">
+                            <img src="./images/website.jpg" alt="Монитор Apple с изображением сайта" width="370" height="294">
+                            <div class="project-item-box">
+                                <h2 class="project-title">Inspiration has no Borders</h2>
+                                <p class="project-text">Веб-сайт</p>
                             </div>
-                        </article>
+                        </a>
                     </li>
                     <li class="project-item">
-                       <article class="project-item-card">
-                        <div class="project-item-content">
+                       <a href="" class="project-item-content">
                             <img src="./images/design.jpg" alt="Страницы журнала" width="370" height="294">
                             <div class="project-item-box">
                                 <h2 class="project-title">Издание Limited Edition</h2>
                                 <p class="project-text">Дизайн</p>
                             </div>
-                        </div>
-                       </article>
+                       </a>
                     </li>
                     <li class="project-item">
-                        <article class="project-item-card">
-                            <div class="project-item-content">
-                                <img src="./images/lab.jpg" alt="Белый ярлык для продукта" width="370" height="294">
-                                <div class="project-item-box">
-                                    <h2 class="project-title">Проект LAB</h2>
-                                    <p class="project-text">Маркетинг</p>
-                                </div>
+                        <a href="" class="project-item-content">
+                            <img src="./images/lab.jpg" alt="Белый ярлык для продукта" width="370" height="294">
+                            <div class="project-item-box">
+                                <h2 class="project-title">Проект LAB</h2>
+                                <p class="project-text">Маркетинг</p>
                             </div>
-                        </article>
+                        </a>
                     </li>
                     <li class="project-item">
-                        <article class="project-item-card">
-                            <div class="project-item-content">
-                                <img src="./images/app.jpg" alt="Ноутбук с изображением приложения" width="370" height="294">
-                                <div class="project-item-box">
-                                    <h2 class="project-title">Growing Business</h2>
-                                    <p class="project-text">Приложение</p>
-                                </div>
+                        <a href="" class="project-item-content">
+                            <img src="./images/app.jpg" alt="Ноутбук с изображением приложения" width="370" height="294">
+                            <div class="project-item-box">
+                                <h2 class="project-title">Growing Business</h2>
+                                <p class="project-text">Приложение</p>
                             </div>
-                        </article>
+                        </a>
                     </li>
                 </ul>
             </div>
